# RawHash

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  log.txt
.github/workflows/: docker-build.yml
cmake/: SetupCCacheMold.cmake  SetupHDF5.cmake  SetupMainTarget.cmake  SetupPOD5.cmake  SetupRUClient.cmake  SetupRawHashLikeTarget.cmake  SetupSLOW5.cmake  SetupTFLite.cmake  Util.cmake  Utils.cmake
own_notes/: notes.txt  training_quantized_pred.txt
python_wrapper/: example.ipynb  example.py  map_reads.sh  rawhash_wrapper.py
src/: CMakeLists.txt  Makefile  bseq.c  bseq.h  chain.h  cli_parsing.cpp  dtw.cpp  dtw.h  hdf5_tools.hpp  hit.c  kalloc.c  kalloc.cpp  kalloc.h  khash.h  kthread.c  kvec.h  lchain.c  main.cpp  pore_model.cpp  pore_model.h  rawhash.h  rawhash_ruclient.cpp  rawhash_ruclient.hpp  rawhash_wrapper.cpp  rawhash_wrapper.hpp  rawindex.cpp  rawindex.h  revent.c  revent.h  rh_kvec.h  rindex.c  rindex.h  rmap.c  rmap.cpp  rmap.h  roptions.c  roptions.h  rseed.c  rseed.h  rsig.c  (+9 more)
test/: README.md
test/data/: README.md  download_d1_sars-cov-2_r94.sh  download_d2_ecoli_r94.sh  download_d3_yeast.sh  download_d4_green_algae.sh  download_d5_human_na12878.sh  download_d6_ecoli_r10.4.sh  download_d7_saureus_r104.sh  download_d8_human_hg002_r1041.sh
test/data/contamination/: generate_fast5_files.sh
test/data/random_community/: 0_generate_random_ids.sh
test/data/relative_abundance/: generate_fast5_files.sh  generate_ref.sh  list.txt
test/evaluation/: README.md
test/evaluation/contamination/: README.md  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/contamination/comparison/: 1_generate_results.sh  2_output_results.sh
test/evaluation/features/: generate_features.sh  train_features.sh  train_rh2.py  w0_bc0_mc5_t05_rawhash2_r10sensitive_onehot_d6.tflite  w0_bc0_mc5_t05_rawhash2_sensitive_onehot_d3.tflite  w0_woRev_rawhash2_viral_onehot.tflite
test/evaluation/features/w0_bc0_mc5_t05_rawhash2_r10sensitive_saved_model_onehot_d6/: fingerprint.pb  keras_metadata.pb  saved_model.pb
test/evaluation/features/w0_bc0_mc5_t05_rawhash2_r10sensitive_saved_model_onehot_d6/variables/: variables.data-00000-of-00001  variables.index
test/evaluation/features/w0_bc0_mc5_t05_rawhash2_sensitive_saved_model_onehot_d3/: fingerprint.pb  keras_metadata.pb  saved_model.pb
test/evaluation/features/w0_bc0_mc5_t05_rawhash2_sensitive_saved_model_onehot_d3/variables/: variables.data-00000-of-00001  variables.index
test/evaluation/features/w0_woRev_rawhash2_viral_saved_model_onehot/: fingerprint.pb  saved_model.pb
test/evaluation/features/w0_woRev_rawhash2_viral_saved_model_onehot/variables/: variables.data-00000-of-00001  variables.index
test/evaluation/read_mapping/: README.md  t_parameters.sh  train_rh2.py  w0_bc0_mc5_occ01_sensitive_logistic.tflite
test/evaluation/read_mapping/d1_sars-cov-2_r94/: README.md  profile_rawhash.sh  profile_rawhash2.sh  run_loop.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_sigmap.sh  run_uncalled.sh  test.fa
test/evaluation/read_mapping/d1_sars-cov-2_r94/comparison/: 1_generate_results.sh  2_output_results.sh
test/evaluation/read_mapping/d2_ecoli_r94/: README.md  profile_rawhash.sh  profile_rawhash2.sh  run_delete.sh  run_loop.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_rawhash2_experiments.sh  run_rawhash2_pod5.sh  run_rawhash2_slow5.sh  run_rawhash_pod5.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/read_mapping/d3_yeast_r94/: README.md  profile_rawhash.sh  profile_rawhash2.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_rawhash2_pod5.sh  run_rawhash2_slow5.sh  run_rawhash_pod5.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/read_mapping/d4_green_algae_r94/: README.md  profile_rawhash.sh  profile_rawhash2.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/read_mapping/d5_human_na12878_r94/: README.md  profile_rawhash.sh  profile_rawhash2.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/read_mapping/d6_ecoli_r104/: README.md  profile_rawhash.sh  run_array.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_rawhash_pod5.sh
test/evaluation/read_mapping/d7_saureus_r104/: profile_rawhash.sh  run_array.sh  run_minimap2.sh  run_rawhash2.sh
test/evaluation/read_mapping/d8_human_hg002_r1041/: profile_rawhash.sh  run_minimap2.sh  run_rawhash2.sh
test/evaluation/read_mapping/w0_bc0_mc5_occ01_sensitive_saved_model_logistic/: fingerprint.pb  keras_metadata.pb  saved_model.pb
test/evaluation/relative_abundance/: README.md  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_sigmap.sh  run_uncalled.sh
test/evaluation/relative_abundance/comparison/: 1_generate_results.sh  2_output_results.sh
test/evaluation/relative_abundance/sequenceuntil/: README.md  run_rawhash.sh  run_rawhash2.sh
test/figures/: figures.pptx
test/figures/profiling/: plot.py
test/figures/sequenced_bases/: plot.py  sequenced_bases.csv
test/figures/sequenced_chunks/: sequenced_chunks.csv
test/figures/time_per_read/: plot.py
test/figures_rawhash/sequenced_chunks/: plot.py
test/figures_rawhash/throughput/: plot.py  throughput.csv
test/figures_rawhash/time_per_read/: mean_time.csv
test/figures_rawhash2/: figures.pptx
test/figures_rawhash2/profiling/: profiling.csv
test/figures_rawhash2/sequenced_bases/: plot.py  sequenced_bases.csv
test/figures_rawhash2/sequenced_chunks/: plot.py  sequenced_chunks.csv
test/figures_rawhash2/throughput/: plot.py  throughput.csv
test/figures_rawhash2/time_per_read/: mean_time.csv  plot.py
test/scripts/: compare_pafs.py  compare_relative_pafs.py  from_txt_exel.py  make_training.py  make_training_genome.py  pafstats.py  rawhash2_ann.paf  rawhash_ann.paf  run_eval.sh  run_evalUncalled.sh  run_minimap2.sh  run_rawhash.sh  run_rawhash2.sh  run_rawhash2_noindex.sh  run_sigmap.sh  run_uncalled.sh  test_paf.py  train_reverse.py
(+19 files in other folders)
